app/04-postgres-service.yaml
#04-postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: zouzou-ns
spec:
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432
