app/07-app-service.yaml
# app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zouzoublique-api
  namespace: zouzou-ns
spec:
  type: LoadBalancer #тест
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
      #targetPort: 8080
  selector:
    app: zouzoublique-api
