app/08-ingress.yaml
#ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zouzoublique-ingress
  namespace: zouzou-ns
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - host: hello.ex
      http:
        paths:
          - path: /v1/zouzoubliques
            pathType: Prefix
            backend:
              service:
                name: zouzoublique-api
                port:
                  number: 80
          - path: /healthz
            pathType: Exact
            backend:
              service:
                name: zouzoublique-api
                port:
                  number: 80
# ###apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: zouzoublique-ingress
#   namespace: zouzou-ns
# spec:
#   rules:
#   - http:
#       paths:
#       - path: /
#         pathType: Prefix
#         backend:
#           service:
#             name: zouzoublique-api
#             port:
#               number: 80
